fixed layout issue on contact and about me

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -2,15 +2,15 @@
     background-image: url(../../assets/morocco.png);
 }
 
-.box {
+.box1 {
     min-height: 400px;
     border: 2px solid #dddddd;
     padding: 30px;
     background-color: #ffffff;
     color: #777777;
     margin: auto;
-    margin-top: 75px; 
-    margin-bottom: 75px;
+    margin-top: 50px; 
+    margin-bottom: 100px;
 }
 
 div.card-body {
